# Uvkornio-Visualizer

./: CMakeLists.txt  LOD.md  PDF_INDEX.md  README.md  TODO.md
.trae/skills/pdf-indexer/: SKILL.md
shaders/: triangle.vert.glsl  triangle.vert.spv  waterfall.vert.glsl  waterfall.vert.spv
src/: audio_stream.cpp  audio_stream.h  differential_math.cpp  differential_math.h  enki_ts.h  main.cpp  microphone_input.cpp  microphone_input.h  spectrum_analyzer.cpp  spectrum_analyzer.h  surround_analyzer.cpp  surround_analyzer.h  visualizer.cpp  visualizer.h  visualizer_presets.h  vulkan_app.cpp  vulkan_app.h  vulkan_context.cpp  vulkan_context.h  waterfall_renderer.cpp  waterfall_renderer.h
